--- a/website/app/index.html
+++ b/website/app/index.html
@@ -212,6 +212,7 @@
 <script src="application/core/projects/project/processes/process-list-controller.js"></script>
 <script src="application/core/projects/project/processes/process-create-controller.js"></script>
 <script src="application/core/projects/project/processes/template-instance-controller.js"></script>
+<script src="application/core/projects/project/processes/setup-instance-controller.js"></script>
 <script src="application/core/projects/project/processes/measurement-controller.js"></script>
 <script src="application/core/projects/project/processes/template-service.js"></script>
 <script src="application/core/projects/project/project-size-filter.js"></script>
