--- a/website/app/application/core/projects/project/processes/measurements.html
+++ b/website/app/application/core/projects/project/processes/measurements.html
@@ -37,15 +37,17 @@
                         <div class="col-xs-5">
                             <input class="form-control" ng-model="choice.value" placeholder="Value...">
                         </div>
-                        <div class="col-xs-2">
+                        <div class="col-xs-1">
                             <i ng-click="addNewChoice()" style="color:#3a9ee3" class="fa fa-plus fa-fw"></i>
+                        </div>
+                        <div class="col-xs-1">
+                            <i ng-click="removeChoice($index)" style="color:#e57373" class="fa fa-minus fa-fw"></i>
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-xs-3">
                             <button class="btn btn-primary" ng-click="done()">Done</button>
-
                         </div>
                     </div>
                 </div>
