--- a/website/app/application/core/projects/project/samples/create.html
+++ b/website/app/application/core/projects/project/samples/create.html
@@ -1,4 +1,9 @@
-<div class="col-xs-7">
-    <process-from-template edit="true" template="template">
-    </process-from-template>
+<div class="row" style="margin-top: 20px;">
+       <div class="col-xs-4">
+            <div class="details-sidebar">
+                <div class="row" style="text-align: center; margin-top: 20px;">
+                    <button ng-click="createSample()" class="btn-details-container btn-sample btn btn-default"> create</button>
+                </div>
+            </div>
+       </div>
 </div>
