--- a/website/app/application/core/projects/project/samples/samples.html
+++ b/website/app/application/core/projects/project/samples/samples.html
@@ -20,9 +20,10 @@
                         </div>
                     </div>
                     <ul class="list-group">
-                        <li style="color: #26A69A" class="list-group-item pointer bold"><i class=""></i>MG + AL ROI sample</li>
-                        <li class="list-group-item pointer">We43 Init sample</li>
-                        <li class="list-group-item pointer">As received sample</li>
+                        <li style="color: #26A69A" class="list-group-item pointer bold">
+                            <i class="fa fa-fw fa-cubes sample"></i>MG + AL ROI sample</li>
+                        <li class="list-group-item pointer"><i class="fa fa-fw fa-cubes sample"></i>We43 Init sample</li>
+                        <li class="list-group-item pointer"><i class="fa fa-fw fa-cubes sample"></i>As received sample</li>
                     </ul>
                 </div>
             </div>
