--- a/website/app/index.html
+++ b/website/app/index.html
@@ -207,6 +207,7 @@
 <script src="application/core/projects/project/samples/sample-edit-controller.js"></script>
 <script src="application/core/projects/project/samples/create.js"></script>
 <script src="application/core/projects/project/samples/sample-from-template.js"></script>
+<script src="application/core/projects/project/samples/view-measuremnts-controller.js"></script>
 <script src="application/core/projects/project/processes/processes-controller.js"></script>
 <script src="application/core/projects/project/processes/process-network-view.js"></script>
 <script src="application/core/projects/project/processes/process-check-service.js"></script>
