--- a/website/app/application/core/projects/project/processes/setup.html
+++ b/website/app/application/core/projects/project/processes/setup.html
@@ -7,9 +7,9 @@
     <div class="modal-body">
         <div class="row">
             <ul>
-                <li>Voltage</li>
-                <li>Pressure</li>
-                <li>Constant</li>
+                <li>Voltage:    <input type="text"></li>
+                <li>Pressure: <input type="text"></li>
+                <li>Constant: <input type="text"></li>
             </ul>
         </div>
     </div>
