--- a/website/app/application/core/projects/project/samples/edit.html
+++ b/website/app/application/core/projects/project/samples/edit.html
@@ -6,6 +6,9 @@
                 Imaging</u></b>
             </li>
             <li style="display: inline-block;padding-right: 20px">
+                <img src="assets/img/splash/process-icon.png" style="height: 35px;padding-bottom: 10px;">TEM Imaging
+            </li>
+            <li style="display: inline-block;padding-right: 20px">
                 <img src="assets/img/splash/process-icon.png" style="height: 35px;padding-bottom: 10px;"> Heat Treatment
             </li>
             <li style="display: inline-block;padding-right: 20px">
@@ -42,7 +45,7 @@
                 <li style="padding:10px;"><b>Composition</b> :
                     <div class="row">
                         <div class="col-xs-offset-1">
-                            Best Measure: <span style="padding-left: 5px;">Mg Al 5%  (TEM Imaging)</span>  <br>
+                            Best Measure: <span style="padding-left: 5px;">Mg Al 5%  (SEM Imaging)</span>  <br>
                             Measurements: <a ng-click="measurements()">link</a>
                         </div>
                     </div>
@@ -74,7 +77,8 @@
                 <li style="padding:10px;"><b>Histogram</b> :
                     <div class="row">
                         <div class="col-xs-offset-1">
-                            Best Measure: <span style="padding-left: 5px;"><a><i
+                            Best Measure: <span style="padding-left: 5px;"><a href="" popover="Graph displayed here...."
+                                                                              popover-title="Particle size distribution"><i
                                 class="fa fa-fw fa-bar-chart"></i></a> </span> (SEM Imaging)<br>
                             Measurements: <a ng-click="measurements()">link</a>
                         </div>
