--- a/website/app/application/core/projects/project/samples/samples.html
+++ b/website/app/application/core/projects/project/samples/samples.html
@@ -20,8 +20,9 @@
                         </div>
                     </div>
                     <ul class="list-group">
-                        <li style="color: #26A69A" class="list-group-item pointer bold">
-                            <i class="fa fa-fw fa-cubes sample"></i>MG + AL ROI sample</li>
+                        <li ui-sref="projects.project.samples.edit" style="color: #26A69A" class="list-group-item pointer bold">
+                            <i class="fa fa-fw fa-cubes sample"></i>
+                            MG + AL ROI sample</li>
                         <li class="list-group-item pointer"><i class="fa fa-fw fa-cubes sample"></i>We43 Init sample</li>
                         <li class="list-group-item pointer"><i class="fa fa-fw fa-cubes sample"></i>As received sample</li>
                     </ul>
@@ -33,4 +34,6 @@
         </div>
     </div>
 </div>
+
+
 
