--- a/website/app/application/core/projects/project/processes/setup.html
+++ b/website/app/application/core/projects/project/processes/setup.html
@@ -7,9 +7,8 @@
     <div class="modal-body">
         <div class="row">
             <ul>
-                <li>Voltage:    <input type="text"></li>
-                <li>Pressure: <input type="text"></li>
-                <li>Constant: <input type="text"></li>
+                <li>Voltage:   <input ng-model="selected.item.voltage" type="text"></li>
+                <li>Pressure:  <input ng-model="selected.item.pressure" type="text"></li>
             </ul>
         </div>
     </div>
