--- a/website/app/application/core/projects/project/processes/create.html
+++ b/website/app/application/core/projects/project/processes/create.html
@@ -9,7 +9,7 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-12">
-                        <label>What did you do ?</label>
+                        <label>How would you describe your process?</label>
 
                         <div class="row">
                             <div class="col-xs-12">
@@ -129,7 +129,7 @@
                 <div class="col-xs-8">
                     <div class="process headings">process information</div>
                     <br>
-                    What did you do ?
+                    How would you describe your process?
                     <div class="row">
                         <textarea placeholder="What" ng-model="model.process_info.what" class="form-control col-xs-8">
                         </textarea>
