--- a/website/app/index.html
+++ b/website/app/index.html
@@ -285,6 +285,7 @@
 <script src="application/services/nav-service.js"></script>
 <script src="application/services/materials-service.js"></script>
 <script src="application/services/cached-service-factory-service.js"></script>
+<script src="application/services/modal-instance-service.js"></script>
 <script src="application/services/project-path-service.js"></script>
 <script src="application/services/tags.js"></script>
 <script src="application/services/prov-magicbar-context.js"></script>
