--- a/website/app/application/core/projects/project/processes/template.html
+++ b/website/app/application/core/projects/project/processes/template.html
@@ -14,9 +14,9 @@
                 <div class="details-sidebar">
                     <ul class="list-group">
                         <li ng-class="{'active': template === selected.item}" ng-click="showDetails(template)"
-                            ng-repeat="template in templates | filter:search"
+                            ng-repeat="template in templates | filter:search | byKey: 'template_type': 'process'"
                             class="list-group-item pointer">
-                            <div>{{template}}</div>
+                            <div>{{template.id}}</div>
                         </li>
                     </ul>
                 </div>
