updates to the process details

--- a/website/app/application/core/projects/project/processes/create.html
+++ b/website/app/application/core/projects/project/processes/create.html
@@ -4,7 +4,7 @@
             <div class="details-sidebar">
                 <div class="row">
                     <div class="col-xs-8" style="margin-top: 10px;">
-                        <h4 class="text-center process">{{template}}</h4>
+                        <h4 class="text-center process">{{template.id}}</h4>
                     </div>
                 </div>
                 <div class="row">
@@ -32,8 +32,12 @@
                     <div class="col-xs-8">
                         <b>Set Up</b>
                         <ul>
-                            <li ng-if="model.attachments.setup.voltage !== ''">Voltage: {{model.attachments.setup.voltage }}</li>
-                            <li ng-if="model.attachments.setup.pressure !== ''">Pressure: {{model.attachments.setup.pressure }}</li>
+                            <li ng-if="model.attachments.setup.voltage !== ''">Voltage:
+                                {{model.attachments.setup.voltage }}
+                            </li>
+                            <li ng-if="model.attachments.setup.pressure !== ''">Pressure:
+                                {{model.attachments.setup.pressure }}
+                            </li>
                         </ul>
                     </div>
                 </div>
