--- a/website/app/application/core/projects/project/processes/template.html
+++ b/website/app/application/core/projects/project/processes/template.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="col-xs-8 details-main-content">
-                <b>{{template}}</b> Details here...
+                <b>{{selected.item.id}}</b> is selected...
             </div>
         </div>
     </div>
