--- a/website/app/index.html
+++ b/website/app/index.html
@@ -14,7 +14,8 @@
     <![endif]-->
     <!-- Fav and touch icons -->
     <link rel="shortcut icon" href="assets/ico/mc-favicon.ico">
-    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900,100,100italic,300italic,400italic,500italic,700italic,900italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900,100,100italic,300italic,400italic,500italic,700italic,900italic'
+          rel='stylesheet' type='text/css'>
 
     <!-- build:css assets/css/style.css -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -321,6 +322,10 @@
 <script src="index/projects-modal.js"></script>
 <script src="index/util.js"></script>
 <script src="index/config.js"></script>
+<script src="application/processes/apt.js"></script>
+<script src="application/processes/process-template-settings.directive.js"></script>
+<script src="application/processes/process-templates.service.js"></script>
+<script src="application/processes/validators.js"></script>
 <!-- endbuild -->
 </body>
 </html>
