--- a/website/app/application/core/projects/project/samples/edit.html
+++ b/website/app/application/core/projects/project/samples/edit.html
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="sample headings">Details</div>
             <div class="col-xs-12">
-                <div class="row"><b>Name: </b> MG + AL ROI sample <br></div>
+                <div class="row"><b>Name: </b>{{current.name}} <br></div>
                 <div class="row"><b>Owner:</b> tammasr@umich.edu <br></div>
                 <div class="row"><b>Description: </b><br>Lorem Ipsum is simply dummy text of the printing and
                     typesetting
