--- a/website/app/application/core/projects/project/samples/samples.html
+++ b/website/app/application/core/projects/project/samples/samples.html
@@ -19,12 +19,22 @@
                             </button>
                         </div>
                     </div>
-                    <ul class="list-group">
-                        <li ui-sref="projects.project.samples.edit" style="color: #26A69A" class="list-group-item pointer bold">
-                            <i class="fa fa-fw fa-cubes sample"></i>
-                            MG + AL ROI sample</li>
-                        <li class="list-group-item pointer"><i class="fa fa-fw fa-cubes sample"></i>We43 Init sample</li>
-                        <li class="list-group-item pointer"><i class="fa fa-fw fa-cubes sample"></i>As received sample</li>
+                    <!--<ul class="list-group">-->
+                        <!--<li ui-sref="projects.project.samples.edit({"sample_id":})" style="color: #26A69A" class="list-group-item pointer bold">-->
+                            <!--<i class="fa fa-fw fa-cubes sample"></i>-->
+                            <!--MG + AL ROI sample</li>-->
+                        <!--<li class="list-group-item pointer"><i class="fa fa-fw fa-cubes sample"></i>We43 Init sample</li>-->
+                        <!--<li class="list-group-item pointer"><i class="fa fa-fw fa-cubes sample"></i>As received sample</li>-->
+                    <!--</ul>-->
+                    <ul  class="list-group">
+                        <li ui-sref="projects.project.samples.edit({'sample_id': sample.id})"
+                            ng-class="{active: current.id === sample.id}"
+                            class="list-group-item pointer"
+                            ng-repeat="sample in project.samples"
+                            ng-click="viewSample(sample)">
+                            <img src="assets/img/splash/sample_icon.png" style="height: 35px;padding-bottom: 10px;">
+                            {{sample.name}}
+                        </li>
                     </ul>
                 </div>
             </div>
