added setup for the process creation

--- a/website/app/application/core/projects/project/processes/create.html
+++ b/website/app/application/core/projects/project/processes/create.html
@@ -4,7 +4,7 @@
             <div class="details-sidebar">
                 <div class="row">
                     <div class="col-xs-8" style="margin-top: 10px;">
-                        <h4 class="text-center process">{{template.id}}</h4>
+                        <h4 class="text-center process">{{template.name}}</h4>
                     </div>
                 </div>
                 <div class="row">
