--- a/website/app/application/processes/process-settings.html
+++ b/website/app/application/processes/process-settings.html
@@ -1,60 +1,111 @@
 <div>
-    <div ng-repeat="setting in settings">
-        <div ng-switch="setting.property._type">
+    <div class="modal-header">
+        <h3 class="modal-title">SetUp</h3>
+    </div>
+    <br>
 
-            <!--------- number --------->
-            <div ng-switch-when="number">
-                <label class="col-xs-3 control-label" for="numberInput">
-                    {{::setting.name}}
-                    <i ng-if="setting.required"
-                       class="fa fa-fw fa-asterisk text-danger"></i>
-                </label>
+    <div class="modal-body">
 
-                <div class="col-xs-6">
-                    <div class="col-xs-8">
-                        <input type="number"
-                               id="numberInput"
-                               step="any"
+        <div class="row" ng-repeat="setting in settings">
+            <div ng-switch="setting.property._type">
+
+                <!--------- number --------->
+                <div ng-switch-when="number">
+                    <label class="col-xs-3 control-label" for="numberInput">
+                        {{::setting.property.name}}
+                        <i ng-if="setting.property.required"
+                           class="fa fa-fw fa-asterisk text-danger"></i>
+                    </label>
+
+                    <div class="col-xs-6">
+                        <div class="col-xs-8">
+                            <input type="number"
+                                   id="numberInput"
+                                   step="any"
+                                   class="form-control"
+                                   ng-required="setting.property.required"
+                                   ng-model="setting.property.value">
+                        </div>
+                        <span ng-if="setting.property.units.length === 0">{{::setting.property.unit}}</span>
+                        <span class="col-xs-4" ng-if="setting.property.units.length !== 0">
+                            <select ng-model="setting.property.unit" data-placeholder="Choose"
+                                    class="form-control"
+                                    ng-required="setting.property.required">
+                                <option value="{{choice}}"
+                                        ng-repeat="choice in setting.property.units">
+                                    {{ choice }}
+                                </option>
+                            </select>
+                        </span>
+                        <span ng-show="form.numberInput.$error.required" class="text-danger"> You must supply a value for {{::setting.property.name}}</span>
+                        <span class="help-block">{{::setting.property.description}}</span>
+                    </div>
+                </div>
+
+                <!--------- selection --------->
+                <div ng-switch-when="selection">
+                    <label class="col-xs-3 control-label" for="selectInput">
+                        {{::setting.property.name}}
+                        <i ng-if="setting.property.required"
+                           class="fa fa-fw fa-asterisk text-danger"></i>
+                    </label>
+
+                    <div class="col-xs-6">
+                        <div class="col-xs-8">
+                            <select ng-model="setting.property.value" data-placeholder="Choose"
+                                    class="form-control "
+                                    ng-required="setting.property.required">
+                                <option value="{{choice.value}}" ng-repeat="choice in setting.property.choices">{{
+                                    choice.name }}
+                                </option>
+                            </select>
+                        </div>
+                        <span ng-if="setting.property.units.length === 0">{{::setting.property.unit}}</span>
+                        <span class="col-xs-4" ng-if="setting.property.units.length !== 0">
+                            <select ng-model="setting.property.unit" data-placeholder="Choose"
+                                    class="form-control"
+                                    ng-required="setting.property.required">
+                                <option value="{{choice}}"
+                                        ng-repeat="choice in setting.property.units">
+                                    {{ choice }}
+                                </option>
+                            </select>
+                        </span>
+                        <span ng-show="form.numberInput.$error.required" class="text-danger"> You must supply a value for {{::setting.property.name}}</span>
+                        <span class="help-block">{{::setting.property.description}}</span>
+                    </div>
+                </div>
+
+                <!--------- string --------->
+                <div ng-switch-when="string">
+                    <label class="col-xs-3 control-label" for="stringInput">
+                        {{::setting.name}}
+                        <i ng-if="setting.required"
+                           class="fa fa-fw fa-asterisk text-danger"></i>
+                    </label>
+
+                    <div class="col-xs-6">
+                        <input type="text"
+                               id="stringInput"
                                class="form-control"
+                               name="stringInput"
                                ng-required="setting.property.required"
                                ng-model="setting.property.value">
+                        <span ng-show="form.stringInput.$error.required" class="text-danger">You must supply a {{::setting.property.name}}.</span>
+                        <span class="help-block">{{::setting.property.description}}</span>
                     </div>
-                    <span ng-if="setting.property.unit !== ''">{{::setting.property.unit}}</span>
-                    <span ng-show="form.numberInput.$error.required" class="text-danger"> You must supply a value for {{::setting.property.name}}</span>
-                    <span class="help-block">{{::setting.property.description}}</span>
                 </div>
-            </div>
 
-            <!--------- selection --------->
-            <div ng-switch-when="selection">
-                selection here for {{setting.property.name}}
-            </div>
-
-            <!--------- string --------->
-            <div ng-switch-when="string">
-                <label class="col-xs-3 control-label" for="stringInput">
-                    {{::setting.name}}
-                    <i ng-if="setting.required"
-                       class="fa fa-fw fa-asterisk text-danger"></i>
-                </label>
-
-                <div class="col-xs-6">
-                    <input type="text"
-                           id="stringInput"
-                           class="form-control"
-                           name="stringInput"
-                           ng-required="setting.property.required"
-                           ng-model="setting.property.value">
-                    <span ng-show="form.stringInput.$error.required" class="text-danger">You must supply a {{::setting.property.name}}.</span>
-                    <span class="help-block">{{::setting.property.description}}</span>
+                <!--------- unknown type --------->
+                <div ng-switch-default>
+                    <span>Unknown template type {{setting.property._type}}</span>
                 </div>
-            </div>
 
-            <!--------- unknown type --------->
-            <div ng-switch-default>
-                <span>Unknown template type {{setting.property._type}}</span>
             </div>
-
         </div>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" ng-click="ok()">OK</button>
+        <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
     </div>
 </div>
