--- a/website/app/application/core/projects/project/processes/create.html
+++ b/website/app/application/core/projects/project/processes/create.html
@@ -32,11 +32,8 @@
                     <div class="col-xs-8">
                         <b>Set Up</b>
                         <ul>
-                            <li ng-if="model.attachments.setup.voltage !== ''">Voltage:
-                                {{model.attachments.setup.voltage }}
-                            </li>
-                            <li ng-if="model.attachments.setup.pressure !== ''">Pressure:
-                                {{model.attachments.setup.pressure }}
+                            <li ng-repeat="setting in model.setUp">
+                                {{setting.property.name}} :: {{setting.property.value}} {{setting.property.unit}}
                             </li>
                         </ul>
                     </div>
