--- a/website/app/application/processes/process-settings.html
+++ b/website/app/application/processes/process-settings.html
@@ -53,6 +53,7 @@
                     <div class="col-xs-6">
                         <div class="col-xs-8">
                             <select ng-model="setting.property.value" data-placeholder="Choose"
+                                    id="selectInput"
                                     class="form-control "
                                     ng-required="setting.property.required">
                                 <option value="{{choice.value}}" ng-repeat="choice in setting.property.choices">{{
